# testcmd

./: .gitignore  0Temp.c  0Temp.cpp  Readme.md  install.sh  main.c  main.cpp  meson.build  readme.md  testcmd.pro
examples/: c_args.c  c_args_to_list.c  c_args_to_str.c  func_str_getlineptr.c  lib_curl.c
exp_glib/: gfile.c  gfilemonitor.c  libnotify.c
exp_tinyc/: c_autofree.c  cprocess.c
glib/: content_type.c  gfilemonitor1.c  gfilemonitor2.c
libgd/: colorswap.c  matrix.c  resize.c
other/: 0other.c  c_modulo.cpp  cdirparser.c  copy_elision.cpp  cpu_count.c  cregexp.c  curl.cpp  dbus_example.c  fgets.cpp  func_execvp.c  func_fnmatch.c  func_strFileRead.c  html_edit.c  lib_xml2.c  libiconv.cpp  parselist.cpp  pcre_utf8.cpp  pthread_create.cpp  read.cpp  scandir.cpp  singleinstance.cpp  str_sort.c  strisblank.cpp  stristr.cpp  stristr.h  strshow.cpp  sys_getpid.c  sys_timeout.c  syslog.c  toupper.cpp  towupper.cpp  unix_socket.cpp  wcsicmp.cpp  wget.cpp
samples/: auto_free.c  cdirparser.c  cdirparser.cpp  cfile_read.c  cfile_read.cpp  cfile_readwrite.c  cfile_readwrite.cpp  cfile_words.c  cfile_write.cpp  cprocess.cpp  cregexp.c  cregexp.cpp  cstring_return.cpp  dbus_notifyd.c  default.cpp  desktop_edit.c  desktop_hide.c  dirparser.cpp  find_prc.c  find_prc.cpp  func_cstr_fileread.c  func_fgets.c  func_file_getline.c  func_get_localtime.c  func_str_getline.c  func_str_getlineptr.c  func_str_getpart.c  getCurrentTime.cpp  getline.cpp  getlineptr.cpp  gio_app_info.c  lib_gumbo.c  list_words.c  netinterface.c  pipe_select.c  pipe_select.cpp  popen.cpp  proc_asound.cpp  strGetLinePtr.cpp  strGetPart.cpp  (+12 more)
samples1/: c_autofree_test.c  calcBox.cpp  calcRb.cpp  func_file_getline.c  func_str_getpart.c  temp_beta.cpp  temp_calc.cpp  temp_calc2.cpp  therm_beta.cpp  therm_simple.cpp  therm_steinharthart.cpp
samples2/: dbus.cpp  finddate.c  glib_keyfile.c  kebek_list.c  strGetLine.cpp  sys_dirstat.c  sys_filemonitor.c  sys_polkit.c  syslog.c  test_autofree.c  testout.cpp  testout.sh  while_read.cpp
time/: func_localtime.c  func_strptime.c
tinyc/: cdirparser.c  cfile_readwrite.c  cfileinfo.c  func_file_read.c  func_other.c  func_str_getpart.c  (+1 more)
(+7 files in other folders)
